--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,6 @@ javafx{
 }
 
 
-//dependencies {
-//    testImplementation platform('org.junit:junit-bom:5.10.0')
-//    testImplementation 'org.junit.jupiter:junit-jupiter'
-//}
-//
-//test {
-//    useJUnitPlatform()
-//}
+dependencies {
+
+}
